# shadow_hand_ign

./: CMakeLists.txt  README.md  package.xml
scripts/: estimate_inertial_properties.py
shadow_hand/: model.sdf
shadow_hand/meshes/visual/: finger_distal.dae  finger_middle.dae  finger_proximal.dae  forearm.dae  knuckle.dae  metacarpal.dae  palm.dae  thumb_distal.dae  thumb_middle.dae  thumb_proximal.dae  wrist.dae
